# puppycat

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_user_password.py  0003_chat_sessions.py
apps/api/app/: __init__.py  cache.py  config.py  db.py  deps.py  errors.py  interfaces.py  main.py  models.py  schemas.py  security.py
apps/api/app/data/: visa_static.json
apps/api/app/datasources/: __init__.py  places.py  weather.py  web_search.py
apps/api/app/documents/: __init__.py  pdf.py
apps/api/app/documents/templates/: base.css  cover_letter.html  itinerary.html  visa.html
apps/api/app/llm/: __init__.py  provider.py
apps/api/app/pipeline/: __init__.py  itinerary.py  verify.py  visa.py
apps/api/app/routes/: __init__.py  auth.py  chat.py  documents.py  itinerary.py  trips.py  visa.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/trips/: page.tsx
apps/web/app/trips/[tripId]/: page.tsx
apps/web/app/visa/: page.tsx
apps/web/components/: AppShell.tsx  Chat.tsx  ItineraryView.tsx  MapView.tsx  PlannerForm.tsx  Sidebar.tsx  SummaryView.tsx  TripWorkspace.tsx  VisaNoticePanel.tsx  WarningBadge.tsx
apps/web/lib/: api.ts  auth.tsx  trips.tsx  types.ts
