[project]
name = "puppycat-api"
version = "0.1.0"
description = "Puppycat Travel App backend — verified AI itinerary planner"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "openai>=1.40",
    "google-genai>=1.10",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
